# korea-ets-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: template.html
data/: dashboard.html  korea_ets.db
examples/: sample_kets_data.json
scripts/: fetch_krx_ets.py
src/korea_ets_mcp/: __init__.py  cli.py  server_lite.py
src/korea_ets_mcp/db/: manager.py  models.py
src/korea_ets_mcp/tools/: __init__.py  dashboard.py  exporter.py  query.py
tests/: conftest.py  test_db.py  test_server_lite.py
